# sysbot

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  antora-playbook.yml  demo_privilege_elevation.py  demo_socks5_proxy.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  docs.yml  pypi-publish.yml  release.yml
docs/: CONNECTOR_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  POLARION_INTEGRATION.md  README.adoc  SECURITY_SUMMARY.md  SOCKS5_PROXY.md  VERSION_MANAGEMENT.md  antora.yml  developer.adoc  http_connector.adoc  index.adoc  listener_plugin.md  quickstart.adoc  references.adoc  robotframework.adoc  setup.adoc  unittest.adoc
examples/: README.md  query_mongodb_results.py  query_results.py  version_management_example.py
sysbot/: CONTRIBUTING.md  Helper.py  README.md  Sysbot.py  __init__.py  helper.py
sysbot/connectors/: ConnectorHandler.py  ConnectorInterface.py  Ios.py  NeoRest.py  Redfish.py  Ssh.py  VMware.py  Winrm.py  __init__.py  config.py  http.py  local.py  localhost.py  redfish.py  socket.py  ssh.py  vsphere.py  winrm.py
sysbot/connectors./: ssh.py
sysbot/dataloaders/: Dataloader.py  DataloaderHandler.py  __init__.py  (+6 more)
sysbotCore/: utils.py
tests/: sysbot.robot  test_Helper.py  test_connector_handler.py  test_connector_interface.py  test_connectors.py  test_dataloader_handler.py  test_listener_http.py  test_privilege_elevation.py  test_version_manager.py  test_versioned_connector.py
(+233 files in other folders)
